--- a/style.css
+++ b/style.css
@@ -1,4 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500&family=Roboto+Slab:wght@300;400;500;600&display=swap');
+
 .nav-link.active {
     color: #89513C;
     font-weight: bold;
 }
+
+h1, h2{
+    font-family: 'Protest Riot', sans-serif;
+    text-shadow: 2px 2px 8px rgb(204, 123, 1)
+}
+
+p, h5{
+    font-family: 'Roboto Slab', serif !important;
+    color: #89513C !important;
+}
+
+.header{
+    background-image: url(/sfondo1.jpg);
+    background-size: cover;
+    height: 420px;
+}
+
+
+.btn{
+    font-family: 'Protest Riot', sans-serif !important;
+    border: 3px solid rgb(255, 157, 0) !important;
+}
+
+.part2{
+    background-color: rgba(239, 212, 133, 0.556);
+}
+
+.carousel-item {
+    height: 600px;
+  }
+
+  .part3{
+    background-color: #ffb871;
+  }
+
+
+  /* stile quinta scheda */
+ .tableimg{
+    height: 100vh;
+    width: 50% !important;
+  }
